@@ -4,20 +4,14 @@ import co.elastic.clients.elasticsearch.ElasticsearchClient;
 import co.elastic.clients.elasticsearch._types.Result;
 import co.elastic.clients.elasticsearch._types.SortOrder;
 import co.elastic.clients.elasticsearch._types.FieldValue;
+import co.elastic.clients.elasticsearch._types.query_dsl.BoolQuery;
 import co.elastic.clients.elasticsearch.core.IndexResponse;
+import co.elastic.clients.elasticsearch.core.SearchRequest;
 import co.elastic.clients.elasticsearch.core.SearchResponse;
 import co.elastic.clients.elasticsearch.indices.CreateIndexResponse;
 import co.elastic.clients.elasticsearch.indices.ExistsRequest;
 import co.elastic.clients.transport.endpoints.BooleanResponse;
 import co.elastic.clients.json.JsonData;
-import co.elastic.clients.elasticsearch._types.SortOrder;
-import co.elastic.clients.elasticsearch._types.FieldValue;
-import co.elastic.clients.elasticsearch.core.SearchResponse;
-import co.elastic.clients.json.JsonData;
-import com.ibm.aimonitoring.processor.dto.*;
-import java.time.Instant;
-import java.util.List;
-import java.util.stream.Collectors;
 import com.ibm.aimonitoring.processor.dto.*;
 import jakarta.annotation.PostConstruct;
 import lombok.RequiredArgsConstructor;
@@ -30,7 +24,6 @@ import java.time.Instant;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * Service for Elasticsearch operations
@@ -49,6 +42,11 @@ public class ElasticsearchService {
     private static final String FIELD_TRACE_ID = "traceId";
     private static final String FIELD_SPAN_ID = "spanId";
     private static final String FIELD_METADATA = "metadata";
+    
+    // Aggregation names
+    private static final String AGG_VOLUME_OVER_TIME = "volume_over_time";
+    private static final String AGG_LEVEL_DISTRIBUTION = "level_distribution";
+    private static final String AGG_TOP_SERVICES = "top_services";
 
     private final ElasticsearchClient elasticsearchClient;
 
@@ -67,9 +65,13 @@ public class ElasticsearchService {
     @PostConstruct
     public void init() {
         try {
-            createIndexIfNotExists();
-            log.info("Elasticsearch service initialized successfully");
-        } catch (Exception e) {
+            if (elasticsearchClient != null && elasticsearchClient.indices() != null) {
+                createIndexIfNotExists();
+                log.info("Elasticsearch service initialized successfully");
+            } else {
+                log.warn("Elasticsearch client not available, skipping index initialization");
+            }
+        } catch (IOException | NullPointerException e) {
             log.error("Failed to initialize Elasticsearch service: {}", e.getMessage(), e);
         }
     }
@@ -78,6 +80,10 @@ public class ElasticsearchService {
      * Create index if it doesn't exist
      */
     private void createIndexIfNotExists() throws IOException {
+        if (elasticsearchClient == null || elasticsearchClient.indices() == null) {
+            throw new IOException("Elasticsearch client is not available");
+        }
+        
         BooleanResponse exists = elasticsearchClient.indices()
                 .exists(ExistsRequest.of(e -> e.index(indexName)));
 
@@ -185,78 +191,109 @@ public class ElasticsearchService {
      */
     public LogSearchResponse searchLogs(LogSearchRequest request) {
         try {
-            SearchResponse<Map> response = elasticsearchClient.search(s -> {
-                // Build the search query
-                s.index(indexName)
-                 .from(request.getPage() * request.getSize())
-                 .size(request.getSize())
-                 .sort(sort -> sort.field(f -> f
-                     .field(request.getSortBy())
-                     .order(request.getSortOrder().equalsIgnoreCase("asc") ? 
-                            SortOrder.Asc : SortOrder.Desc)
-                 ));
-
-                // Add query filters
-                s.query(q -> q.bool(b -> {
-                    // Free text search
-                    if (request.getQuery() != null && !request.getQuery().isEmpty()) {
-                        b.must(m -> m.match(match -> match.field(FIELD_MESSAGE).query(request.getQuery())));
-                    }
-                    
-                    // Level filter
-                    if (request.getLevels() != null && !request.getLevels().isEmpty()) {
-                        b.filter(f -> f.terms(t -> t.field(FIELD_LEVEL).terms(terms -> 
-                            terms.value(request.getLevels().stream()
-                                .map(FieldValue::of)
-                                .collect(Collectors.toList()))
-                        )));
-                    }
-                    
-                    // Service filter
-                    if (request.getServices() != null && !request.getServices().isEmpty()) {
-                        b.filter(f -> f.terms(t -> t.field(FIELD_SERVICE).terms(terms -> 
-                            terms.value(request.getServices().stream()
-                                .map(FieldValue::of)
-                                .collect(Collectors.toList()))
-                        )));
-                    }
-                    
-                    // Time range filter
-                    if (request.getStartTime() != null || request.getEndTime() != null) {
-                        b.filter(f -> f.range(r -> {
-                            r.field(FIELD_TIMESTAMP);
-                            if (request.getStartTime() != null) {
-                                r.gte(JsonData.of(request.getStartTime().toString()));
-                            }
-                            if (request.getEndTime() != null) {
-                                r.lte(JsonData.of(request.getEndTime().toString()));
-                            }
-                            return r;
-                        }));
-                    }
-                    
-                    return b;
-                }));
-                
+            @SuppressWarnings("unchecked")
+            SearchResponse<Map<String, Object>> response = (SearchResponse<Map<String, Object>>) (SearchResponse<?>) elasticsearchClient.search(s -> {
+                buildSearchRequest(s, request);
                 return s;
             }, Map.class);
 
-            // Convert response to DTO
-            List<LogEntryDTO> logs = response.hits().hits().stream()
-                .map(hit -> convertToLogEntry(hit.source()))
-                .collect(Collectors.toList());
-
-            return LogSearchResponse.builder()
-                .logs(logs)
-                .total(response.hits().total().value())
-                .page(request.getPage())
-                .size(request.getSize())
-                .build();
+            return buildSearchResponse(response, request);
 
         } catch (IOException e) {
             log.error("Failed to search logs: {}", e.getMessage(), e);
-            throw new RuntimeException("Failed to search logs", e);
+            throw new ElasticsearchIndexException("Failed to search logs", e);
         }
+    }
+
+    /**
+     * Build the Elasticsearch search request
+     */
+    private void buildSearchRequest(SearchRequest.Builder s, LogSearchRequest request) {
+        s.index(indexName)
+         .from(request.getPage() * request.getSize())
+         .size(request.getSize())
+         .sort(sort -> sort.field(f -> f
+             .field(request.getSortBy())
+             .order(request.getSortOrder().equalsIgnoreCase("asc") ? 
+                    SortOrder.Asc : SortOrder.Desc)
+         ));
+
+        s.query(q -> q.bool(b -> {
+            addTextSearch(b, request);
+            addLevelFilter(b, request);
+            addServiceFilter(b, request);
+            addTimeRangeFilter(b, request);
+            return b;
+        }));
+    }
+
+    /**
+     * Add free text search to query
+     */
+    private void addTextSearch(BoolQuery.Builder b, LogSearchRequest request) {
+        if (request.getQuery() != null && !request.getQuery().isEmpty()) {
+            b.must(m -> m.match(match -> match.field(FIELD_MESSAGE).query(request.getQuery())));
+        }
+    }
+
+    /**
+     * Add level filter to query
+     */
+    private void addLevelFilter(BoolQuery.Builder b, LogSearchRequest request) {
+        if (request.getLevels() != null && !request.getLevels().isEmpty()) {
+            b.filter(f -> f.terms(t -> t.field(FIELD_LEVEL).terms(terms -> 
+                terms.value(request.getLevels().stream()
+                    .map(FieldValue::of)
+                    .toList())
+            )));
+        }
+    }
+
+    /**
+     * Add service filter to query
+     */
+    private void addServiceFilter(BoolQuery.Builder b, LogSearchRequest request) {
+        if (request.getServices() != null && !request.getServices().isEmpty()) {
+            b.filter(f -> f.terms(t -> t.field(FIELD_SERVICE).terms(terms -> 
+                terms.value(request.getServices().stream()
+                    .map(FieldValue::of)
+                    .toList())
+            )));
+        }
+    }
+
+    /**
+     * Add time range filter to query
+     */
+    private void addTimeRangeFilter(BoolQuery.Builder b, LogSearchRequest request) {
+        if (request.getStartTime() != null || request.getEndTime() != null) {
+            b.filter(f -> f.range(r -> {
+                r.field(FIELD_TIMESTAMP);
+                if (request.getStartTime() != null) {
+                    r.gte(JsonData.of(request.getStartTime().toString()));
+                }
+                if (request.getEndTime() != null) {
+                    r.lte(JsonData.of(request.getEndTime().toString()));
+                }
+                return r;
+            }));
+        }
+    }
+
+    /**
+     * Build the search response from Elasticsearch response
+     */
+    private LogSearchResponse buildSearchResponse(SearchResponse<Map<String, Object>> response, LogSearchRequest request) {
+        List<LogEntryDTO> logs = response.hits().hits().stream()
+            .map(hit -> convertToLogEntry(hit.source()))
+            .toList();
+
+        return LogSearchResponse.builder()
+            .logs(logs)
+            .total(response.hits().total().value())
+            .page(request.getPage())
+            .size(request.getSize())
+            .build();
     }
 
     /**
@@ -289,7 +326,8 @@ public class ElasticsearchService {
     public DashboardMetricsDTO getDashboardMetrics() {
         try {
             // Get total logs count
-            SearchResponse<Map> totalResponse = elasticsearchClient.search(s -> s
+            @SuppressWarnings("unchecked")
+            SearchResponse<Map<String, Object>> totalResponse = (SearchResponse<Map<String, Object>>) (SearchResponse<?>) elasticsearchClient.search(s -> s
                 .index(indexName)
                 .size(0)
                 .query(q -> q.matchAll(m -> m))
@@ -298,7 +336,8 @@ public class ElasticsearchService {
             long totalLogs = totalResponse.hits().total().value();
             
             // Get error count
-            SearchResponse<Map> errorResponse = elasticsearchClient.search(s -> s
+            @SuppressWarnings("unchecked")
+            SearchResponse<Map<String, Object>> errorResponse = (SearchResponse<Map<String, Object>>) (SearchResponse<?>) elasticsearchClient.search(s -> s
                 .index(indexName)
                 .size(0)
                 .query(q -> q.term(t -> t.field(FIELD_LEVEL).value("ERROR")))
@@ -307,7 +346,8 @@ public class ElasticsearchService {
             long errorCount = errorResponse.hits().total().value();
             
             // Get warning count
-            SearchResponse<Map> warningResponse = elasticsearchClient.search(s -> s
+            @SuppressWarnings("unchecked")
+            SearchResponse<Map<String, Object>> warningResponse = (SearchResponse<Map<String, Object>>) (SearchResponse<?>) elasticsearchClient.search(s -> s
                 .index(indexName)
                 .size(0)
                 .query(q -> q.term(t -> t.field(FIELD_LEVEL).value("WARN")))
@@ -346,7 +386,8 @@ public class ElasticsearchService {
      */
     public List<LogVolumeDTO> getLogVolume(Instant startTime, Instant endTime) {
         try {
-            SearchResponse<Map> response = elasticsearchClient.search(s -> s
+            @SuppressWarnings("unchecked")
+            SearchResponse<Map<String, Object>> response = (SearchResponse<Map<String, Object>>) (SearchResponse<?>) elasticsearchClient.search(s -> s
                 .index(indexName)
                 .size(0)
                 .query(q -> q.range(r -> r
@@ -354,7 +395,7 @@ public class ElasticsearchService {
                     .gte(JsonData.of(startTime.toString()))
                     .lte(JsonData.of(endTime.toString()))
                 ))
-                .aggregations("volume_over_time", a -> a
+                .aggregations(AGG_VOLUME_OVER_TIME, a -> a
                     .dateHistogram(dh -> dh
                         .field(FIELD_TIMESTAMP)
                         .fixedInterval(fi -> fi.time("1h"))
@@ -363,12 +404,12 @@ public class ElasticsearchService {
                 )
             , Map.class);
             
-            if (response.aggregations() == null || !response.aggregations().containsKey("volume_over_time")) {
+            if (response.aggregations() == null || !response.aggregations().containsKey(AGG_VOLUME_OVER_TIME)) {
                 log.warn("No volume_over_time aggregation found in response");
                 return List.of();
             }
             
-            var agg = response.aggregations().get("volume_over_time");
+            var agg = response.aggregations().get(AGG_VOLUME_OVER_TIME);
             if (agg == null) {
                 log.warn("Volume over time aggregation is null");
                 return List.of();
@@ -384,23 +425,23 @@ public class ElasticsearchService {
             
             return buckets.stream()
                 .map(bucket -> {
-                    // bucket.key() returns a String in Elasticsearch Java client
+                    // bucket.key() returns a Long for date histogram buckets
                     String keyStr = bucket.keyAsString();
                     Instant timestamp;
                     if (keyStr != null && !keyStr.isEmpty()) {
                         timestamp = Instant.parse(keyStr);
                     } else {
-                        // Fallback: try to parse as epoch millis
-                        timestamp = Instant.ofEpochMilli(Long.valueOf(bucket.key()));
+                        // Fallback: use bucket.key() directly as it returns Long (epoch millis)
+                        timestamp = Instant.ofEpochMilli(bucket.key());
                     }
                     return LogVolumeDTO.builder()
                         .timestamp(timestamp)
                         .count(bucket.docCount())
                         .build();
                 })
-                .collect(Collectors.toList());
+                .toList();
                 
-        } catch (Exception e) {
+        } catch (IOException e) {
             log.error("Failed to get log volume: {}", e.getMessage(), e);
             e.printStackTrace();
             return List.of();
@@ -412,10 +453,11 @@ public class ElasticsearchService {
      */
     public List<LogLevelDistributionDTO> getLogLevelDistribution() {
         try {
-            SearchResponse<Map> response = elasticsearchClient.search(s -> s
+            @SuppressWarnings("unchecked")
+            SearchResponse<Map<String, Object>> response = (SearchResponse<Map<String, Object>>) (SearchResponse<?>) elasticsearchClient.search(s -> s
                 .index(indexName)
                 .size(0)
-                .aggregations("level_distribution", a -> a
+                .aggregations(AGG_LEVEL_DISTRIBUTION, a -> a
                     .terms(t -> t.field(FIELD_LEVEL))
                 )
             , Map.class);
@@ -423,12 +465,12 @@ public class ElasticsearchService {
             long totalLogs = response.hits().total().value();
             log.debug("Total logs for level distribution: {}", totalLogs);
             
-            if (response.aggregations() == null || !response.aggregations().containsKey("level_distribution")) {
+            if (response.aggregations() == null || !response.aggregations().containsKey(AGG_LEVEL_DISTRIBUTION)) {
                 log.warn("No level_distribution aggregation found in response");
                 return List.of();
             }
             
-            var agg = response.aggregations().get("level_distribution");
+            var agg = response.aggregations().get(AGG_LEVEL_DISTRIBUTION);
             if (agg == null) {
                 log.warn("Level distribution aggregation is null");
                 return List.of();
@@ -448,7 +490,7 @@ public class ElasticsearchService {
                             .percentage(percentage)
                             .build();
                     })
-                    .collect(Collectors.toList());
+                    .toList();
             } else if (agg.isLterms()) {
                 var buckets = agg.lterms().buckets().array();
                 log.debug("Found {} level distribution buckets (lterms)", buckets.size());
@@ -462,13 +504,13 @@ public class ElasticsearchService {
                             .percentage(percentage)
                             .build();
                     })
-                    .collect(Collectors.toList());
+                    .toList();
             } else {
                 log.warn("Could not extract buckets from level_distribution aggregation - not sterms or lterms");
                 return List.of();
             }
                 
-        } catch (Exception e) {
+        } catch (IOException e) {
             log.error("Failed to get log level distribution: {}", e.getMessage(), e);
             e.printStackTrace();
             return List.of();
@@ -480,10 +522,11 @@ public class ElasticsearchService {
      */
     public List<ServiceLogCountDTO> getTopServices(int limit) {
         try {
-            SearchResponse<Map> response = elasticsearchClient.search(s -> s
+            @SuppressWarnings("unchecked")
+            SearchResponse<Map<String, Object>> response = (SearchResponse<Map<String, Object>>) (SearchResponse<?>) elasticsearchClient.search(s -> s
                 .index(indexName)
                 .size(0)
-                .aggregations("top_services", a -> a
+                .aggregations(AGG_TOP_SERVICES, a -> a
                     .terms(t -> t
                         .field(FIELD_SERVICE)
                         .size(limit)
@@ -491,12 +534,12 @@ public class ElasticsearchService {
                 )
             , Map.class);
             
-            if (response.aggregations() == null || !response.aggregations().containsKey("top_services")) {
+            if (response.aggregations() == null || !response.aggregations().containsKey(AGG_TOP_SERVICES)) {
                 log.warn("No top_services aggregation found in response");
                 return List.of();
             }
             
-            var agg = response.aggregations().get("top_services");
+            var agg = response.aggregations().get(AGG_TOP_SERVICES);
             if (agg == null) {
                 log.warn("Top services aggregation is null");
                 return List.of();
@@ -511,7 +554,7 @@ public class ElasticsearchService {
                         .service(bucket.key().stringValue())
                         .count(bucket.docCount())
                         .build())
-                    .collect(Collectors.toList());
+                    .toList();
             } else if (agg.isLterms()) {
                 var buckets = agg.lterms().buckets().array();
                 log.debug("Found {} top service buckets (lterms)", buckets.size());
@@ -520,13 +563,13 @@ public class ElasticsearchService {
                         .service(String.valueOf(bucket.key()))
                         .count(bucket.docCount())
                         .build())
-                    .collect(Collectors.toList());
+                    .toList();
             } else {
                 log.warn("Could not extract buckets from top_services aggregation - not sterms or lterms");
                 return List.of();
             }
                 
-        } catch (Exception e) {
+        } catch (IOException e) {
             log.error("Failed to get top services: {}", e.getMessage(), e);
             e.printStackTrace();
             return List.of();
